# Pramana

./: .gitattributes  .gitignore  README.md
backend/: .gitignore  4  4.md  README.md  file.py  first.txt  powermind.db  pyproject.toml  rag_v2_test.ipynb  second.txt  tests.json  tests_results.json  tests_results.md  third.txt
backend/app/: database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/rag_v2/: __init__.py  config.py  crag.py  embedder.py  graph.py  ingestor.py  llm.py  vector_store.py  vision.py
backend/app/routers/: chat.py  chat_v2.py  history.py  ingest.py  ingest_v2.py  rag.py
backend/app/services/: chat_service.py  rag_conversation.py  rag_v2_conversation.py
backend/pinecone_exports/: manifest.json
backend/processed_embeddings/: embeddings.npy  metadata.json
backend/scripts/: export_pinecone_vectors.py  run_tests_json.py  run_v2_data_ingest.py
docs/: ai_workflow.md  backend.md  backend_integration.md  frontend.md
frontend/: RAG_INTEGRATION.md  README.md
frontend/Marketting/: README.md  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: ChatInterface.tsx  SourcesPanel.tsx
frontend/marketing-site/: README.md
outputs/: qa_results.md
scripts/: profile_response_timings.py
service/: .gitignore  README.md  pyproject.toml  test_cases.json  tests.json
service/outputs/: qa_results.json  qa_results.md  tests_results.json  tests_results_with_imported_embeddings.md
service/tests/: test_device.py
src/powermind_rag/: cli.py  config.py  document.py  ocr.py  pipeline.py  relevance.py  (+2 more)
(+26 files in other folders)
