[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "powermind-multimodal-rag",
]

[tool.uv.sources]
powermind-multimodal-rag = { path = "../service" }
