[project]
name = "backend"
version = "0.2.0"
description = "PowerMind RAG chatbot backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "powermind-multimodal-rag",
    "langgraph>=0.2",
    "groq>=0.9",
    "pdfplumber>=0.10",
    "python-docx>=1.1",
    "pinecone>=5.0",
    "google-genai>=1.0",
    "transformers>=4.50",
    "torch>=2.0",
    "accelerate>=0.26",
    "lettucedetect>=0.1.8",
]

[tool.uv.sources]
powermind-multimodal-rag = { path = "../service" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
]
